# files_unifeder

./: .gitignore  ARCHITECTURE.md  CODE_IMPROVEMENTS.md  CONTRIBUTING.md  DEPLOYMENT.md  INSTALLATION.md  README.md  TESTING.md  TEST_COVERAGE_SUMMARY.md  app.js  index.html  main.py  merge_pdfs.py  pyproject.toml  requirements.txt  styles.css
.github/workflows/: build-client-package.yml  test.yml
build_config/: build.bat  build.sh  macos.spec  notarize.sh  sign_windows.bat  windows.spec
cli/: command_line.py  interactive.py
docs/: ARCHITECTURE.md  CONFIGURATION.md  DEPRECATION.md  IMPROVEMENT_ROADMAP.md  INSTALLATION.md  MATCHING_RULES.md  PACKAGING.md  README_USER.md  STYLE.md  TESTING.md
pdf_merger/: __init__.py  config.py  config_schema.py  constants.py  data_parser.py  enums.py  excel_converter.py  file_reader.py  pdf_operations.py  pdf_operations_streaming.py  processor.py  validators.py
pdf_merger/config/: __init__.py  config_manager.py  config_schema.py
pdf_merger/core/: __init__.py  constants.py  csv_excel_reader.py  csv_serial_constants.py  enums.py  excel_constants.py  file_constants.py  job_loader.py  license_constants.py  merge_orchestrator.py  merge_processor.py  merger.py  pdf_operations_constants.py  pipeline_constants.py  (+8 more)
tests/: ORGANIZATION.md  README.md  __init__.py  test_config.py  test_core.py  test_data_parser.py  test_exceptions.py  test_file_reader.py  test_licensing.py  test_pdf_operations.py  test_processor.py  test_ui.py  test_ui_init.py  test_validators.py
tools/: README.md  __init__.py  license_generator.py  upload_to_drive.py
(+92 files in other folders)
